--- a/gsap.html
+++ b/gsap.html
@@ -16,6 +16,7 @@
 
 
     <header>
+        <h1>Rathod uday</h1>
         <div class="nav-ber">
             <div class="nav-title">
                 <h1><dfn>GSAP</dfn></h1>
